[package]
name = "pomors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive"] }
crossterm = "0.26.1"
home = "0.5.5"
rusty_audio = "1.4.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tui = "0.19.0"
